security_group_default.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This template provision reusable for Security Group

# Define Parameters

Parameters:
  # My VPC Id 
  myDefaultVPCId:
    Type: String
    Default: ""
    Description: Enter the VPC ID that you are creating you Sec Grp on
    
  # My Sec Grp Name  
  mySecGrpName: 
    Type: String
    Default: WordPress Sec Group

  # Sec grp Ingress
  myNetworkIP: 
    Type: String
    Default: ""
    Description: Enter your IP or Cidr range
    
# Team Key
  TeamTagKey:
    Type: String
    Default: Team
  TeamTagValue:
    Type: String
    Default: Infra
  EnvTagKey:
    Type: String
    Default: Env 
  EnvTagValue:
    Type: String
    Default: Dev   

# Define Resources

Resources: 
  # Ec2 Security Group
  mySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: This security group for WordPress
      GroupName: !Ref mySecGrpName
      VpcId: !Ref myDefaultVPCId
      SecurityGroupIngress: 
        - CidrIp: !Ref myNetworkIP
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22 
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80   
      Tags: 
        - Key: Name
          Value: mySecGrpName
        - Key: !Ref TeamTagKey
          Value: !Ref TeamTagValue
        - Key: !Ref EnvTagKey
          Value: !Ref  EnvTagValue 

# Define Outputs

Outputs: 
  mySecGrpName: 
    Description: This is the name of Wordpress Sec Group
    Value: !Ref mySecurityGroup
